Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.14.0, 0.14.1
-
Linux 3.10.0-327.36.3.el7.x86_64
Python 3.6.8
Pandas 0.24.2
Pyarrow 0.14.0
Description
I have two short sample programs which demonstrate the issue:
import pyarrow as pa import pandas as pd empty = pd.DataFrame({'foo':[]},dtype='category') table = pa.Table.from_pandas(empty) outfile = pa.output_stream('bar') writer = pa.RecordBatchFileWriter(outfile,table.schema) writer.write(table) writer.close()
import pyarrow as pa pa.ipc.open_file('bar').read_pandas() Segmentation fault
My apologies if this was already reported elsewhere, I searched but could not find an issue which seemed to refer to the same behavior.
Attachments
Issue Links
- links to