ARROW-5952: [Python] fix conversion of chunked dictionary array with 0 chunks